// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckBox should renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "transparent",
        "flexDirection": "row",
        "maxWidth": "100%",
        "opacity": 1,
      },
      undefined,
    ]
  }
>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "borderColor": "rgba(32, 36, 45, 0.3)",
        "borderRadius": 6,
        "borderWidth": 3,
        "height": 30,
        "marginRight": 18,
        "width": 30,
      }
    }
    value="Pepega"
  />
  <Text
    allowFontScaling={true}
  >
    Pepega
  </Text>
</View>
`;

exports[`CheckBox should renders correctly checked 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "transparent",
        "flexDirection": "row",
        "maxWidth": "100%",
        "opacity": 1,
      },
      undefined,
    ]
  }
>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "borderColor": "rgba(32, 36, 45, 0.3)",
        "borderRadius": 6,
        "borderWidth": 0,
        "height": 30,
        "marginRight": 18,
        "width": 30,
      }
    }
    value="Pepega"
  >
    <SvgMock
      height={30}
      width={30}
    />
  </View>
  <Text
    allowFontScaling={true}
  >
    Pepega
  </Text>
</View>
`;

exports[`CheckBox should renders correctly disabled 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "transparent",
        "flexDirection": "row",
        "maxWidth": "100%",
        "opacity": 0.4,
      },
      undefined,
    ]
  }
>
  <View
    accessibilityState={
      Object {
        "disabled": true,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "borderColor": "rgba(32, 36, 45, 0.3)",
        "borderRadius": 6,
        "borderWidth": 3,
        "height": 30,
        "marginRight": 18,
        "width": 30,
      }
    }
    value="Pepega"
  />
  <Text
    allowFontScaling={true}
  >
    Pepega
  </Text>
</View>
`;
